# myasus4linux

./: .gitignore  Cargo.toml  README.md  _typos.toml  deny.toml  justfile  meson.build  meson.options
.githooks/: pre-push
.github/actions/gtk-deps/: action.yml
.github/workflows/: cd.yml  ci.yml
build-aux/flatpak/: io.github.berkmuftuoglu.MyAsus4Linux.json
crates/myasus-core/: Cargo.toml
crates/myasus-core/src/: lib.rs
crates/myasus-core/tests/: battery_enumeration.rs
crates/myasusd/: Cargo.toml
crates/myasusd/src/: helper.rs  main.rs
data/: 99-myasus4linux-backlight.rules  99-myasus4linux.rules  install-daemon.sh  io.github.berkmuftuoglu.MyAsus4Linux.Helper.conf  io.github.berkmuftuoglu.MyAsus4Linux.Helper.service  io.github.berkmuftuoglu.MyAsus4Linux.Helper.service.in  io.github.berkmuftuoglu.MyAsus4Linux.desktop.in.in  io.github.berkmuftuoglu.MyAsus4Linux.gschema.xml.in  io.github.berkmuftuoglu.MyAsus4Linux.metainfo.xml.in.in  meson.build  myasusd.service  myasusd.service.in  setup-permissions.sh
data/icons/: meson.build
data/resources/: resources.gresource.xml
data/resources/ui/: window.ui
data/systemd/: myasus4linux-charge-limit.service
devnotes/: BEST_PRACTICES.md  ROADMAP.md
polkit/: io.github.berkmuftuoglu.MyAsus4Linux.Helper.policy
src/: config.rs  format.rs  main.rs  meson.build  num.rs  palette.rs
src/backend/: battery.rs  brightness.rs  cpu.rs  daemon.rs  detect.rs  error.rs  fan.rs  ipc.rs  keyboard.rs  mod.rs  safeguards.rs  settings.rs  sysfs.rs  thermal.rs
src/ui/: app.rs  battery_cell.rs  battery_page.rs  commit.rs  cores.rs  cpu_page.rs  draw.rs  fan_page.rs  gauge.rs  info_page.rs  keyboard_page.rs  meter.rs  mod.rs  overview.rs  palette.rs  panel.rs  style.css  zones.rs
src/ui/builders/: cores.rs  mod.rs  zones.rs
src/ui/pages/: battery_page.rs  cpu_page.rs  fan_page.rs  info_page.rs  keyboard_page.rs  mod.rs  overview.rs
src/ui/widgets/: anim.rs  battery_cell.rs  chart.rs  draw.rs  gauge.rs  ledbar.rs  meter.rs  mod.rs  stat.rs  table.rs
