[package]
name = "myasus4linux"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
license = "GPL-3.0-or-later"
description = "Open source replacement for ASUS MyASUS on Linux"
authors = ["Berk Muftuoglu"]

[dependencies]
gtk = { version = "0.10", package = "gtk4" }
adw = { version = "0.8", package = "libadwaita", features = ["v1_4"] }
relm4 = { version = "0.10", features = ["libadwaita"] }
glib = "0.21"
gio = "0.21"
thiserror = "2"
zbus = "5"
async-channel = "2"
tracing = "0.1"
tracing-subscriber = "0.3"
serde = { version = "1", features = ["derive"] }
toml = "0.8"
dirs-next = "2"

[build-dependencies]
glib-build-tools = "0.21"

[dev-dependencies]
tempfile = "3"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
must_use_candidate = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
wildcard_imports = "allow"
# UI widget/display casts are range-clamped and intentional
cast_possible_truncation = "allow"
cast_sign_loss = "allow"
cast_precision_loss = "allow"
struct_field_names = "allow"
assigning_clones = "allow"
clone_on_ref_ptr = "warn"
dbg_macro = "warn"
print_stderr = "warn"
print_stdout = "warn"
todo = "warn"
unimplemented = "warn"
unwrap_used = "warn"

[lints.rust]
unsafe_code = "deny"
