[package]
name = "myasus4linux"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
publish.workspace = true
description = "Open source replacement for ASUS MyASUS on Linux"

[lints]
workspace = true

[workspace]
resolver = "3"
members = ["crates/myasus-core", "crates/myasusd"]

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
license = "GPL-3.0-or-later"
authors = ["Berk Muftuoglu"]
# Distributed as Flatpak/distro packages, never to crates.io; this also lets
# cargo-deny accept the internal path dependencies.
publish = false

# Versions shared by more than one crate live here so a bump happens in one place.
[workspace.dependencies]
myasus-core = { path = "crates/myasus-core" }
thiserror = "2"
zbus = "5"
tracing = "0.1"
tracing-subscriber = "0.3"
tempfile = "3"

[dependencies]
myasus-core.workspace = true
gtk = { version = "0.10", package = "gtk4" }
adw = { version = "0.8", package = "libadwaita", features = ["v1_4"] }
relm4 = { version = "0.10", features = ["libadwaita"] }
glib = "0.21"
gio = "0.21"
thiserror.workspace = true
zbus.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[build-dependencies]
glib-build-tools = "0.21"

[dev-dependencies]
tempfile.workspace = true

[profile.release]
# Smaller daemon + GUI binaries for distro packages.
strip = true

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
must_use_candidate = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
wildcard_imports = "allow"
# precision loss on f64 <- small int (load averages, drawing geometry) is always
# exact enough here; truncation and sign loss are NOT blanket-allowed -- those go
# through clamp helpers and a narrowly-scoped #[expect(reason = ...)] at the call
# site (see src/num.rs).
cast_precision_loss = "allow"
struct_field_names = "allow"
# assigning_clones removed for test
clone_on_ref_ptr = "warn"
dbg_macro = "warn"
print_stderr = "warn"
print_stdout = "warn"
todo = "warn"
unimplemented = "warn"
# A daemon (and a GUI) must unwind/return cleanly, never hard-exit mid-flight.
exit = "deny"
# Prefer to_owned() over to_string() on a &str. (string_to_string is covered by
# pedantic's implicit_clone.)
str_to_string = "warn"
# panic-class guardrails: hard-denied on production paths (allowed in tests).
unwrap_used = "deny"
expect_used = "deny"
unwrap_in_result = "deny"
panic = "deny"
indexing_slicing = "deny"

[workspace.lints.rust]
unsafe_code = "deny"
rust_2018_idioms = { level = "warn", priority = -1 }
