[package]
name = "myasus-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
publish.workspace = true
description = "Shared privileged-operation contract for myasus4linux (paths, validation, writes)"

[dependencies]
thiserror.workspace = true

[lints]
workspace = true
