[package]
name = "myasusd"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
publish.workspace = true
description = "Privileged D-Bus system daemon for myasus4linux hardware controls"

[[bin]]
name = "myasusd"
path = "src/main.rs"

[dependencies]
myasus-core.workspace = true
zbus.workspace = true
zbus_polkit = "5"
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber = { workspace = true, features = ["env-filter"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal"] }

[dev-dependencies]
tempfile.workspace = true

[lints]
workspace = true
